fix: dim-on인 경우에만 z-index 설정

--- a/src/scss/base/_mixin.scss
+++ b/src/scss/base/_mixin.scss
@@ -76,5 +76,4 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
-  z-index: 1;
 }
