--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -118,6 +118,7 @@
 .dim {
   &-on::before {
     @include dim;
+    z-index: 1;
     animation: fade-in 0.3s linear forwards;
   }
 
